# learn-ghactions

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: main.yml
src/fast_module/: __init__.py  bindings.cpp
tests/: test_integration.py  test_unit.py
