[build-system]
requires = ["setuptools>=65", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-module-demo"
version = "0.0.1"
description = "A demo C++ extension"
requires-python = ">=3.8"
dependencies = [
    "pybind11>=2.10",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["src"]
